--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -7,14 +7,17 @@
         <th>Launch Date</th>
     </tr>
     <tr class="data-row" *ngFor = "let satellite of satellites">
+        <!--how get to change color if type is space debris?
+        boolean works (i think)
+        warning style is .warning
+        ng if true then style.warning????-->
         <td>{{ satellite.name }}</td>
-        <td>{{ satellite.type }}</td>
+        <td [class.warning] = "satellite.isSpaceDebris()">{{ satellite.type }}</td>
         <td>{{ satellite.operational }}</td>
         <td>{{ satellite.orbitType }}</td>
         <td>{{ satellite.launchDate }}</td>
     </tr>
 </table>
-<!--it works now??? wtf is wrong-->
 <!-- TODO 2b: use *ngFor to display satellite data in the table -->
 <!-- TODO 3b: add style directive to conditionally highlight satellite type -->
 
